[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Audio/Music/map_of_the_problematique_8_bit-cropped.ogg" type="AudioStream" id=2]
[ext_resource path="res://Entities/Menu/Stage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Menu/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "FadeToNormal"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0509804, 0, 0.0666667, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]

resource_name = "FadeToNormal"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Initialise"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"

[node name="Stage" parent="." instance=ExtResource( 3 )]

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )

[node name="Transitions" type="AnimationPlayer" parent="TransitionLayer"]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FadeToBlack = SubResource( 1 )
anims/FadeToNormal = SubResource( 2 )
anims/Initialise = SubResource( 3 )
blend_times = [  ]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="finished" from="Stage" to="." method="_on_Stage_finished"]
[connection signal="load_next_stage" from="Stage" to="." method="_on_Stage_load_next_stage"]
[connection signal="pause" from="Stage" to="." method="_on_Stage_pause"]
[connection signal="resume" from="Stage" to="." method="_on_Stage_resume"]
[connection signal="animation_finished" from="TransitionLayer/Transitions" to="." method="_on_Transitions_animation_finished"]
